--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 languageCode = "en-us"
 publishDir = "public"
 buildDrafts = true
-baseurl = "https://seanzhang0316.github.io/"
+baseurl = "https://seanzhang0316.github.io"
 title = "乌鸦坐飞机"
 author = "Sean Zhang"
 pygmentsUseClasses = true
@@ -12,13 +12,9 @@ copyright = "&copy; 2017. All rights reserved."
 canonifyurls = true
 paginate = 10
 theme = "hyde"
-RSSUri = "atom.xml"
 paginatePath = "post"
 config = "config.toml"
 contentdir = "content"
 defaultLayout = "post"
 disableLiveReload = false
-# Do not build RSS files
-disableRSS = false
-# Do not build Sitemap file
-disableSitemap = false
+
