--- a/config.toml
+++ b/config.toml
@@ -1,20 +1,29 @@
-languageCode = "en-us"
+languageCode = "zh-cn"
 publishDir = "public"
-buildDrafts = true
 baseurl = "https://seanzhang0316.github.io"
 title = "乌鸦坐飞机"
-author = "Sean Zhang"
+
+[author]
+name = "Sean Zhang"
+email = "zhang.xiang1991@gmail.com"
 pygmentsUseClasses = true
-disqusShortname = "https-seanzhang0316-github-io"
 
 # Shown in the side menu
-copyright = "&copy; 2017. All rights reserved."
+copyright = "&copy; 2018. All rights reserved."
 canonifyurls = true
 paginate = 10
-theme = "hyde"
+theme = "hugo-theme-cactus-plus"
 paginatePath = "post"
 config = "config.toml"
 contentdir = "content"
 defaultLayout = "post"
 disableLiveReload = false
+[params]
+  githubName = "seanzhang0316"
+  description = "Java" ## 博客的描述
+  useDescriptionReplaceSummary = true
+  enableDisqus = true
+  disqusShortname = "https-seanzhang0316-github-io"
+  github_user = "seanzhang0316"
+  excerpt_link = "[阅读全文]" ## 博客首页显示博客概要时代替Read
 
