--- a/wercker.yml
+++ b/wercker.yml
@@ -2,7 +2,7 @@ box: debian
 build:
     steps:
         - arjen/hugo-build:
-            theme: hyde
+            theme: hugo-theme-cactus-plus
             flags: --buildDrafts=true
 deploy:
     steps:
