--- a/wercker.yml
+++ b/wercker.yml
@@ -8,7 +8,7 @@ build:
 deploy:
     steps:
         - install-packages:
-            packages: git ssh-client
+            packages: git
         - lukevivier/gh-pages@0.2.1:
             token: $GIT_TOKEN
             domain: seanzhang0316.github.io
