--- a/wercker.yml
+++ b/wercker.yml
@@ -2,13 +2,12 @@ box: debian
 build:
     steps:
         - arjen/hugo-build:
-			version: "0.17"
             theme: hugo-theme-cactus-plus
             flags: --buildDrafts=true
 deploy:
     steps:
         - install-packages:
-            packages: git
+            packages: git ssh-client
         - lukevivier/gh-pages@0.2.1:
             token: $GIT_TOKEN
             domain: seanzhang0316.github.io
