更新 wrecker.yml配置文件

--- a/wercker.yml
+++ b/wercker.yml
@@ -8,7 +8,7 @@ deploy:
     steps:
         - install-packages:
             packages: git ssh-client
-        - lukevivier/gh-pages@0.2.1:
+        - - leipert/git-push:
             token: $GIT_TOKEN
             domain: seanzhang0316.github.io
             basedir: public
