--- a/wercker.yml
+++ b/wercker.yml
@@ -7,8 +7,8 @@ build:
 deploy:
     steps:
         - install-packages:
-            packages: git ssh-client
+            packages: github
         - leipert/git-push:
-            token: $GIT_TOKEN
-            domain: seanzhang0316.github.io
+            gh_oauth: $GIT_TOKEN
+            repo: seanzhang0316/seanzhang0316.github.io
             basedir: public
