更新 wrecker.yml配置文件

--- a/wercker.yml
+++ b/wercker.yml
@@ -11,4 +11,5 @@ deploy:
         - leipert/git-push:
             gh_oauth: $GIT_TOKEN
             repo: seanzhang0316/seanzhang0316.github.io
+			branch: master
             basedir: public
