更新 wrecker.yml配置文件

--- a/wercker.yml
+++ b/wercker.yml
@@ -7,7 +7,7 @@ build:
 deploy:
     steps:
         - install-packages:
-            packages: github
+            packages: git
         - leipert/git-push:
             gh_oauth: $GIT_TOKEN
             repo: seanzhang0316/seanzhang0316.github.io
