--- a/wercker.yml
+++ b/wercker.yml
@@ -1,10 +1,15 @@
+build:
+	steps:
+		- arjen/hugo-build:
+			theme: hugo-theme-cactus-plus
+            flags: --buildDrafts=true
 deploy:
-  box: samueldebruyn/debian-git
-  steps:
-    - leipert/git-push:
-        gh_oauth: $GIT_TOKEN
-        basedir: public
-        clean_removed_files: true
-        branch: $GIT_BRANCH
-        repo: $GIT_REPO
-        gh_pages_domain: $GIT_DOMAIN
+	box: samueldebruyn/debian-git
+	steps:
+		- leipert/git-push:
+			gh_oauth: $GIT_TOKEN
+			basedir: public
+			clean_removed_files: true
+			branch: $GIT_BRANCH
+			repo: $GIT_REPO
+			gh_pages_domain: $GIT_DOMAIN
