--- a/wercker.yml
+++ b/wercker.yml
@@ -1,15 +1,22 @@
-box: debian
+box: golang:latest
+
 build:
-    steps:
-        - arjen/hugo-build:
-            theme: hugo-theme-cactus-plus
-            flags: --buildDrafts=true
+  steps:
+    - script:
+        name: initialize and update git submodules
+        code: |
+            git submodule init
+            git submodule update --remote --recursive
+    - arjen/hugo-build:
+        version: "HEAD"
+        theme: academic
+
 deploy:
-	steps:
-		- leipert/git-push:
+  steps:
+    - install-packages:
+            packages: git
+    - leipert/git-push:
 			gh_oauth: $GIT_TOKEN
 			basedir: public
-			clean_removed_files: true
 			branch: $GIT_BRANCH
 			repo: $GIT_REPO
-			gh_pages_domain: $GIT_DOMAIN
