--- a/wercker.yml
+++ b/wercker.yml
@@ -14,7 +14,7 @@ build:
 deploy:
   steps:
     - install-packages:
-            packages: git
+            packages: git ssh-client
     - leipert/git-push:
 			gh_oauth: $GIT_TOKEN
 			basedir: public
