更新 wrecker.yml配置文件

--- a/wercker.yml
+++ b/wercker.yml
@@ -1,9 +1,8 @@
-box: debian
+box: golang
 build:
     steps:
         - arjen/hugo-build:
             theme: hugo-theme-cactus-plus
-            flags: --buildDrafts=true
 deploy:
     steps:
         - install-packages:
